--- a/app/globals.css
+++ b/app/globals.css
@@ -80,3 +80,15 @@ body,
     @apply bg-background text-foreground;
   }
 }
+
+::-webkit-scrollbar {
+  width: 6px;
+}
+::-webkit-scrollbar-track {
+  background-color: #333;
+  opacity: 0.7;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #858585;
+  border-radius: 10px;
+}
